--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
     <script src="vendor/vide/jquery.vide.min.js"></script>
 
     <!-- Custom scripts for this template -->
-    <script src="js/coming-soon.min.js"></script>
+    <!-- <script src="js/coming-soon.min.js"></script> -->
 
   </body>
 
