--- a/index.html
+++ b/index.html
@@ -33,6 +33,9 @@
       <div class="container h-100">
         <div class="row h-100">
           <div class="col-12 my-auto">
+            <div class="logo">
+              <img src="img/logo.png" class="img-fluid" alt="Responsive image">
+            </div>
             <div class="masthead-content text-white py-5 py-md-0">
               <h1 class="mb-3">Coming Soon!</h1>
               <p class="mb-5">We're working hard to finish the development of this site. Our target launch date is
