--- a/index.html
+++ b/index.html
@@ -52,6 +52,11 @@
       </div>
     </div>
 
+    <div class="main-img">
+        <img src="img/logo-big.png" class="img-fluid" alt="Responsive image">
+    </div>
+
+
     <div class="social-icons">
       <ul class="list-unstyled text-center mb-0">
         <li class="list-unstyled-item">
