--- a/index.html
+++ b/index.html
@@ -48,13 +48,18 @@
               </div>
             </div>
           </div>
+          <div class="col-md-6">
+          </div>
+          <div class="col-md-6">
+            <div class="main-img">
+                <img src="img/logo-big.png" class="img-fluid" alt="Responsive image">
+            </div>
+          </div>
         </div>
       </div>
     </div>
 
-    <div class="main-img">
-        <img src="img/logo-big.png" class="img-fluid" alt="Responsive image">
-    </div>
+
 
 
     <div class="social-icons">
