--- a/index.html
+++ b/index.html
@@ -26,7 +26,17 @@
 
   <body>
 
-    <div class="overlay"></div>
+    <div class="overlay">
+      <div class="row">
+        <div class="col-md-6">
+        </div>
+        <div class="col-md-6">
+          <div class="main-img">
+              <img src="img/logo-big.png" class="img-fluid" alt="Responsive image">
+          </div>
+        </div>
+      </div>
+    </div>
 
     <div class="masthead">
       <div class="masthead-bg"></div>
@@ -46,13 +56,6 @@
                   <button class="btn btn-secondary" type="button">Notify Me!</button>
                 </div>
               </div>
-            </div>
-          </div>
-          <div class="col-md-6">
-          </div>
-          <div class="col-md-6">
-            <div class="main-img">
-                <img src="img/logo-big.png" class="img-fluid" alt="Responsive image">
             </div>
           </div>
         </div>
