--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       <div class="row">
         <div class="col-md-6">
         </div>
-        <div class="col-md-6">
+        <div class="col-md-6 justify-content-center">
           <div class="main-img">
               <img src="img/logo-big.png" class="img-fluid" alt="Responsive image">
           </div>
