--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <div class="col-md-6">
         </div>
         <div class="col-md-6 justify-content-center">
-          <div class="main-img">
+          <div class="main-img justify-content-center">
               <img src="img/logo-big.png" class="img-fluid" alt="Responsive image">
           </div>
         </div>
