--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
       <div class="row">
         <div class="col-md-6">
         </div>
-        <div class="col-md-6 justify-content-center">
-          <div class="main-img justify-content-center">
+        <div class="col-md-6">
+          <div class="main-img">
               <img src="img/logo-big.png" class="img-fluid" alt="Responsive image">
           </div>
         </div>
