--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
               <img src="img/logo.png" class="img-fluid" alt="Responsive image">
             </div>
             <div class="masthead-content text-white py-5 py-md-0">
-              <h1 class="mb-3">Coming Soon!</h1>
+              <h1 class="mb-3">COMING SOON</h1>
               <p class="mb-5">We're working hard to finish the development of this site. Our target launch date is
                 <strong>2018</strong>! Sign up for updates using the form below!</p>
               <div class="input-group input-group-newsletter">
