--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
             </div>
             <div class="masthead-content text-white py-5 py-md-0">
               <h1 class="mb-3">COMING SOON</h1>
-              <p class="mb-5">We're working hard to finish the development of this site. Our target launch date is
-                <strong>2018</strong>! Sign up for updates using the form below!</p>
+              <p class="mb-5">This website will be ready really soon! We are planning this event for May
+                <strong>2018</strong>! Click the button to sign up for more information.</p>
               <div class="input-group input-group-newsletter">
                 <!-- <input type="email" class="form-control" placeholder="Enter email..." aria-label="Enter email..." aria-describedby="basic-addon"> -->
                 <div class="input-group-append">
