--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
               <div class="input-group input-group-newsletter">
                 <!-- <input type="email" class="form-control" placeholder="Enter email..." aria-label="Enter email..." aria-describedby="basic-addon"> -->
                 <div class="input-group-append">
-                  <button class="btn btn-secondary" type="button" href="https://docs.google.com/forms/d/1fQWjV68CyZ-U0BGa8J7DVZCPJ3rapmIaDrfpZrTy-FU/viewform?usp=sharing&edit_requested=true">I'm Interested</button>
+                  <button class="btn btn-secondary" type="submit" href="https://docs.google.com/forms/d/1fQWjV68CyZ-U0BGa8J7DVZCPJ3rapmIaDrfpZrTy-FU/viewform?usp=sharing&edit_requested=true">I'm Interested</button>
                 </div>
               </div>
             </div>
