--- a/index.html
+++ b/index.html
@@ -53,9 +53,7 @@
                 <strong>2018</strong>! Click the button to sign up for more information.</p>
               <div class="input-group input-group-newsletter">
                 <!-- <input type="email" class="form-control" placeholder="Enter email..." aria-label="Enter email..." aria-describedby="basic-addon"> -->
-                <div class="input-group-append">
-                  <a href="https://docs.google.com/forms/d/1fQWjV68CyZ-U0BGa8J7DVZCPJ3rapmIaDrfpZrTy-FU/viewform?usp=sharing&edit_requested=true" class="btn">I'm Interested</a>
-                </div>
+                  <a href="https://docs.google.com/forms/d/1fQWjV68CyZ-U0BGa8J7DVZCPJ3rapmIaDrfpZrTy-FU/viewform?usp=sharing&edit_requested=true" class="btn btn-secondary">I'm Interested</a>
               </div>
             </div>
           </div>
