--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             <div class="masthead-content text-white py-5 py-md-0">
               <h1 class="mb-3">COMING SOON</h1>
               <p class="mb-5">This website will be ready really soon! We are planning this event for May
-                <strong>2018</strong>! Click the button to sign up for more information.</p>
+                2018! Click the button to sign up for more information.</p>
               <div class="input-group input-group-newsletter">
                 <!-- <input type="email" class="form-control" placeholder="Enter email..." aria-label="Enter email..." aria-describedby="basic-addon"> -->
                   <a href="https://docs.google.com/forms/d/1fQWjV68CyZ-U0BGa8J7DVZCPJ3rapmIaDrfpZrTy-FU/viewform?usp=sharing&edit_requested=true" class="btn btn-secondary">I'm Interested</a>
