--- a/about.html
+++ b/about.html
@@ -28,8 +28,8 @@
   <body>
     <section id="logo">
       <div class="container">
-        <div class="row justify-content-center">
-          <div class="col-12 justify-content-center">
+        <div class="row">
+          <div class="col-lg-12">
                 <div class="logo">
                   <img src="img/logo-blk.png" class="img-fluid" alt="Responsive image">
                 </div>
