--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Hack the OR 2018</title>
+    <title>About - Hack the OR 2018</title>
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -29,8 +29,8 @@
     <section id="logo">
       <div class="container">
         <div class="row">
-          <div class="col-lg-12">
-                <div class="logo">
+          <div class="col-lg-12 justify-content-md-center">
+                <div class="logo-abt">
                   <img src="img/logo-blk.png" class="img-fluid" alt="Responsive image">
                 </div>
           </div>
