--- a/about.html
+++ b/about.html
@@ -42,7 +42,8 @@
       <div class="container">
         <div class="row justify-content-center">
           <div class="col-md-8 justify-content-center text-align-left">
-                <p> Some Example Text Here </p>
+                <h3> <strong>What's this all about?</strong></h3>
+                <h3> Hack the OR 2018
           </div>
         </div>
       </div>
