--- a/about.html
+++ b/about.html
@@ -28,7 +28,7 @@
   <body>
     <section id="logo">
       <div class="container">
-        <div class="row">
+        <div class="row justify-content-md-center">
           <div class="col-lg-12 justify-content-md-center">
                 <div class="logo-abt">
                   <img src="img/logo-blk.png" class="img-fluid" alt="Responsive image">
