--- a/about.html
+++ b/about.html
@@ -43,7 +43,22 @@
         <div class="row justify-content-center">
           <div class="col-md-8 justify-content-center text-align-left">
                 <h3> <strong>What's this all about?</strong></h3>
-                <h3> Hack the OR 2018
+                <p> Hack the OR 2018 is a one-day action packed event in which students, residents,
+                  attendings and individuals from many disciplines will come together to solve problems
+                  to improve the surgical experience for both patients and providers.</p>
+
+                <h3> <strong>What can I expect?</strong></h3>
+                <p>Our event will replicate the healthcare hackathon model successfully tried at both
+                  MIT and Yale. Briefly, pain points in the surgical process or operating room will be
+                  presented in the morning. Solutions will be pitched and teams will be formed to
+                  further develop them. Chalk-talk style presentations will be given in the evening
+                  in front of a panel of judges for the chance to win cash prizes!</p>
+
+                <h3> <strong>Who should attend?</strong></h3>
+                <p> Hack the OR 2018 is a one-day action packed events in which students, residents,
+                  attendings and individuals from many disciplines will come together to solve problems
+                  to improve the surgical experience for both patients and providers.</p>
+
           </div>
         </div>
       </div>
