--- a/about.html
+++ b/about.html
@@ -55,9 +55,20 @@
                   in front of a panel of judges for the chance to win cash prizes!</p>
 
                 <h3> <strong>Who should attend?</strong></h3>
-                <p> Hack the OR 2018 is a one-day action packed events in which students, residents,
-                  attendings and individuals from many disciplines will come together to solve problems
-                  to improve the surgical experience for both patients and providers.</p>
+                <p> Anyone! Especially if you're interested in surgery and making it better. We
+                envision most participants will be medical students, residents and attendings; however,
+                patients, OR staff, engineers, coders, business experts and industry leaders are
+                welcome!</p>
+
+                <h3> <strong>What can I win?</strong></h3>
+                <p>TBD</p>
+
+                <h3> <strong>What if I don't know any problems or solutions in surgery?</strong></h3>
+                <p>That's okay! Come, be inspired and join a team. You'll learn a lot and have
+                a great time!</p>
+
+
+
 
           </div>
         </div>
