--- a/about.html
+++ b/about.html
@@ -67,6 +67,9 @@
                 <p>That's okay! Come, be inspired and join a team. You'll learn a lot and have
                 a great time!</p>
 
+                <h3> <strong>Learn More</strong></h3>
+                <p>View additional information and resources at <a href="http://www.yalehackhealth.org">Yale Healthcare Hackathon</a> and <a href="http://hackingmedicine.mit.edu">MIT Hacking Medicine</a></p>
+
 
 
 
