--- a/about.html
+++ b/about.html
@@ -68,7 +68,9 @@
                 a great time!</p>
 
                 <h3> <strong>Learn More</strong></h3>
-                <p>View additional information and resources at <a href="http://www.yalehackhealth.org">Yale Healthcare Hackathon</a> and <a href="http://hackingmedicine.mit.edu">MIT Hacking Medicine</a></p>
+                <p>View additional information and resources at <a href="http://www.yalehackhealth.org">
+                  Yale Healthcare Hackathon</a> and <a href="http://hackingmedicine.mit.edu">MIT Hacking
+                    Medicine</a></p>
 
 
 
