--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 <!-- <input type="email" class="form-control" placeholder="Enter email..." aria-label="Enter email..." aria-describedby="basic-addon"> -->
                   <a href="https://docs.google.com/forms/d/1fQWjV68CyZ-U0BGa8J7DVZCPJ3rapmIaDrfpZrTy-FU/viewform?usp=sharing&edit_requested=true" class="btn btn-secondary">I'm Interested</a>
               </div>
-              <p><br><br>Or learn more about the event <a href="../about.html">here</a></p>
+              <p><br>Or learn more about the event <a href="../about.html">here</a></p>
             </div>
           </div>
         </div>
