--- a/index.html
+++ b/index.html
@@ -85,6 +85,12 @@
       </ul>
     </div>
 
+    <section id="team">
+    <div class="container">
+      Some text here
+    </div>
+  </section>
+
     <!-- Bootstrap core JavaScript -->
     <script src="vendor/jquery/jquery.min.js"></script>
     <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
