--- a/about.html
+++ b/about.html
@@ -29,7 +29,7 @@
     <section id="logo">
       <div class="container">
         <div class="row justify-content-md-center">
-          <div class="col-lg-12 justify-content-md-center">
+          <div class="col-lg-12 justify-content-md-center text-center">
                 <div class="logo-abt">
                   <img src="img/logo-blk.png" class="img-fluid" alt="Responsive image">
                 </div>
