--- a/about.html
+++ b/about.html
@@ -42,33 +42,33 @@
       <div class="container">
         <div class="row justify-content-center">
           <div class="col-md-8 justify-content-center text-align-left">
-                <h3> <strong>What's this all about?</strong></h3>
-                <p> Hack the OR 2018 is a one-day action packed event in which students, residents,
+                <h3 style="color:#4A4A4A;"> <strong>What's this all about?</strong></h3>
+                <p  style="color:#4A4A4A;"> Hack the OR 2018 is a one-day action packed event in which students, residents,
                   attendings and individuals from many disciplines will come together to solve problems
                   to improve the surgical experience for both patients and providers.</p>
 
-                <h3> <strong>What can I expect?</strong></h3>
-                <p>Our event will replicate the healthcare hackathon model successfully tried at both
+                <h3  style="color:#4A4A4A;"> <strong>What can I expect?</strong></h3>
+                <p  style="color:#4A4A4A;">Our event will replicate the healthcare hackathon model successfully tried at both
                   MIT and Yale. Briefly, pain points in the surgical process or operating room will be
                   presented in the morning. Solutions will be pitched and teams will be formed to
                   further develop them. Chalk-talk style presentations will be given in the evening
                   in front of a panel of judges for the chance to win cash prizes!</p>
 
-                <h3> <strong>Who should attend?</strong></h3>
-                <p> Anyone! Especially if you're interested in surgery and making it better. We
+                <h3  style="color:#4A4A4A;"> <strong>Who should attend?</strong></h3>
+                <p  style="color:#4A4A4A;"> Anyone! Especially if you're interested in surgery and making it better. We
                 envision most participants will be medical students, residents and attendings; however,
                 patients, OR staff, engineers, coders, business experts and industry leaders are
                 welcome!</p>
 
-                <h3> <strong>What can I win?</strong></h3>
-                <p>TBD</p>
+                <h3  style="color:#4A4A4A;"> <strong>What can I win?</strong></h3>
+                <p  style="color:#4A4A4A;">TBD</p>
 
-                <h3> <strong>What if I don't know any problems or solutions in surgery?</strong></h3>
-                <p>That's okay! Come, be inspired and join a team. You'll learn a lot and have
+                <h3  style="color:#4A4A4A;"> <strong>What if I don't know any problems or solutions in surgery?</strong></h3>
+                <p  style="color:#4A4A4A;">That's okay! Come, be inspired and join a team. You'll learn a lot and have
                 a great time!</p>
 
-                <h3> <strong>Learn More</strong></h3>
-                <p>View additional information and resources at <a href="http://www.yalehackhealth.org">
+                <h3  style="color:#4A4A4A;"> <strong>Learn More</strong></h3>
+                <p  style="color:#4A4A4A;">View additional information and resources at <a href="http://www.yalehackhealth.org">
                   Yale Healthcare Hackathon</a> and <a href="http://hackingmedicine.mit.edu">MIT Hacking
                     Medicine</a></p>
 
