nurses/scrub techs

--- a/about.html
+++ b/about.html
@@ -44,8 +44,9 @@
           <div class="col-md-8 justify-content-center text-align-left">
                 <h3 style="color:#4A4A4A;"> <strong>What's this all about?</strong></h3>
                 <p  style="color:#4A4A4A;"> Hack the OR 2018 is a one-day action packed event in which students, residents,
-                  attendings and individuals from many disciplines will come together to solve problems
-                  to improve the surgical experience for both patients and providers.</p>
+                  attendings, nurses and circulators, scrub techs, OR scheduling staff, patients and individuals from many
+                  disciplines will come together to solve problems to improve the surgical experience for both patients
+                  and providers.</p>
 
                 <h3  style="color:#4A4A4A;"> <strong>What can I expect?</strong></h3>
                 <p  style="color:#4A4A4A;">Our event will replicate the healthcare hackathon model successfully tried at both
