--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             </div>
             <div class="masthead-content text-white py-5 py-md-0">
               <h1 class="mb-3">COMING SOON</h1>
-              <p class="mb-5">This website will be ready really soon! We are planning this event for May
+              <p class="mb-5">This website will be ready soon! We are planning this event for September.
                 2018! Click the button to sign up for more information.</p>
               <div class="input-group input-group-newsletter">
                 <!-- <input type="email" class="form-control" placeholder="Enter email..." aria-label="Enter email..." aria-describedby="basic-addon"> -->
@@ -85,11 +85,11 @@
       </ul>
     </div>
 
-    <section id="team">
+    <!-- <section id="team">
     <div class="container">
       Some text here
     </div>
-  </section>
+  </section> -->
 
     <!-- Bootstrap core JavaScript -->
     <script src="vendor/jquery/jquery.min.js"></script>
