--- a/dev/index.html
+++ b/dev/index.html
@@ -56,13 +56,18 @@
       <div class="intro-body">
         <div class="container">
           <div class="row">
-            <div class="col-lg-8 mx-auto">
-              <h1 class="brand-heading">Hack the OR</h1>
+            <div class="col-lg-6 mx-auto">
+              <h1 class="brand-heading">Hack
+                <br>the <span style="background-color: #FFFF00">OR</span></h1>
               <p class="intro-text">Yale Surgical Hackathon
                 <br>@Yale School of Medicine</p>
               <a href="#about" class="btn btn-circle js-scroll-trigger">
                 <i class="fa fa-angle-double-down animated"></i>
               </a>
+            </div>
+            <div class="col-lg-6 mx-auto">
+              <p class="intro-text">Some Text Here
+                <br>Some Text Here</p>
             </div>
           </div>
         </div>
