--- a/dev/index.html
+++ b/dev/index.html
@@ -68,9 +68,11 @@
             </div>
           </div>
           <div class="row">
-            <a href="#about" class="btn btn-circle js-scroll-trigger">
-              <i class="fa fa-angle-double-down animated"></i>
-            </a>
+            <div class="col-lg-8 mx-auto">
+              <a href="#about" class="btn btn-circle js-scroll-trigger">
+                <i class="fa fa-angle-double-down animated"></i>
+              </a>
+            </div>
           </div>
         </div>
       </div>
