--- a/dev/index.html
+++ b/dev/index.html
@@ -58,7 +58,7 @@
           <div class="row">
             <div class="col-lg-6 mx-auto">
               <h1 class="brand-heading">Hack
-                <br>the <span style="background-color: #37474f"> OR </span></h1>
+                <br>the <span style="background-color: #37474f">&nbspOR&nbsp</span></h1>
               <p class="intro-text">Yale Surgical Hackathon
                 <br>@Yale School of Medicine</p>
             </div>
