--- a/dev/index.html
+++ b/dev/index.html
@@ -59,21 +59,20 @@
             <div class="col-lg-6 mx-auto">
               <h1 class="brand-heading">Hack
                 <br>the <span style="background-color: #37474f">&nbspOR&nbsp</span></h1>
-              <p class="intro-text">Yale Surgical Hackathon
-                <br>@Yale School of Medicine</p>
+              <p class="intro-text">@Yale School of Medicine</p>
             </div>
-            <div class="col-lg-6 mx-auto">
-              <p class="intro-text">Some Text Here
-                <br>Some Text Here</p>
+            <div class="col-lg-6 mx-auto text-align-middle">
+              <p class="intro-text">Saturday, September 29, 2018
+                <br>333 Cedar Street, New Haven</p>
             </div>
           </div>
-          <div class="row">
+          <!-- <div class="row">
             <div class="col-lg-8 mx-auto">
               <a href="#about" class="btn btn-circle js-scroll-trigger">
                 <i class="fa fa-angle-double-down animated"></i>
               </a>
             </div>
-          </div>
+          </div> -->
         </div>
       </div>
     </header>
