--- a/dev/index.html
+++ b/dev/index.html
@@ -79,7 +79,7 @@
     </header>
 
     <!-- About Section -->
-    <section id="about" class="content-section text-center">
+    <section id="about" class="content-section text-align-left">
       <div class="container">
         <div class="row">
           <div class="col-lg-8 mx-auto">
