--- a/dev/index.html
+++ b/dev/index.html
@@ -83,7 +83,7 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-8 mx-auto">
-            <h2>IDEA. PROTOTPYE. <span style="background-color: #03a9f4 color: #ffffff">&nbspREPEAT.&nbsp</span></h2>
+            <h2>IDEA. PROTOTPYE. <span style="background-color: #03a9f4; color: #ffffff">&nbspREPEAT.&nbsp</span></h2>
             <p>Grayscale is a free Bootstrap theme created by Start Bootstrap. It can be yours right now, simply download the template on
               <a href="http://startbootstrap.com/template-overviews/grayscale/">the preview page</a>. The theme is open source, and you can use it for any purpose, personal or commercial.</p>
             <p>This theme features stock photos by
