--- a/dev/index.html
+++ b/dev/index.html
@@ -84,26 +84,38 @@
         <div class="row">
           <div class="col-lg-8 mx-auto">
             <h2>IDEA. PROTOTPYE. <span style="background-color: #03a9f4; color: #ffffff">&nbspREPEAT.&nbsp</span></h2>
-            <p>Grayscale is a free Bootstrap theme created by Start Bootstrap. It can be yours right now, simply download the template on
-              <a href="http://startbootstrap.com/template-overviews/grayscale/">the preview page</a>. The theme is open source, and you can use it for any purpose, personal or commercial.</p>
-            <p>This theme features stock photos by
-              <a href="http://gratisography.com/">Gratisography</a>
-              along with a custom Google Maps skin courtesy of
-              <a href="http://snazzymaps.com/">Snazzy Maps</a>.</p>
-            <p>Grayscale includes full HTML, CSS, and custom JavaScript files along with SASS and LESS files for easy customization!</p>
+            <p>A hackathon is an event in which people at all levels of training (attendings, residents, medical students), and across
+            variety of disciplines (medicine, engineering, design, etc.) come together to come up with problems in a particular field and
+            design solutions through iterative prototyping.</p>
+            <p>We want to apply this concept to the field of surgery.</p>
           </div>
         </div>
       </div>
     </section>
 
     <!-- Download Section -->
-    <section id="download" class="download-section content-section text-center">
+    <section id="download" class="download-section content-section  text-align-left">
       <div class="container">
         <div class="col-lg-8 mx-auto">
-          <h2>Download Grayscale</h2>
-          <p>You can download Grayscale for free on the preview page at Start Bootstrap.</p>
-          <a href="http://startbootstrap.com/template-overviews/grayscale/" class="btn btn-default btn-lg">Visit Download Page</a>
+          <h2>SCHEDULE OF<span style="background-color: #03a9f4; color: #ffffff">&nbspEVENTS&nbsp</span></h2>
         </div>
+        <div class="row">
+          <div class="col-md-4 mx-auto">
+            <p>8AM - TEXT</p>
+            <p>8AM - TEXT</p>
+            <p>8AM - TEXT</p>
+            <p>8AM - TEXT</p>
+            <p>8AM - TEXT</p>
+          </div>
+          <div class="col-md-4 mx-auto">
+            <p>8AM - TEXT</p>
+            <p>8AM - TEXT</p>
+            <p>8AM - TEXT</p>
+            <p>8AM - TEXT</p>
+            <p>8AM - TEXT</p>
+          </div>
+        </div>
+
       </div>
     </section>
 
