--- a/dev/index.html
+++ b/dev/index.html
@@ -96,8 +96,10 @@
     <!-- Download Section -->
     <section id="download" class="download-section content-section  text-align-left">
       <div class="container">
-        <div class="col-lg-8 mx-auto">
-          <h2>SCHEDULE OF<span style="background-color: #03a9f4; color: #ffffff">&nbspEVENTS&nbsp</span></h2>
+        <div class="row">
+          <div class="col-lg-8 mx-auto">
+            <h2>SCHEDULE OF<span style="background-color: #03a9f4; color: #ffffff">&nbspEVENTS&nbsp</span></h2>
+          </div>
         </div>
         <div class="row">
           <div class="col-md-4 mx-auto">
@@ -124,6 +126,33 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-8 mx-auto">
+            <h2>SCHEDULE OF<span style="background-color: #03a9f4; color: #ffffff">&nbspEVENTS&nbsp</span></h2>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-4 mx-auto">
+            <p>8AM - TEXT</p>
+            <p>8AM - TEXT</p>
+            <p>8AM - TEXT</p>
+            <p>8AM - TEXT</p>
+            <p>8AM - TEXT</p>
+          </div>
+          <div class="col-md-4 mx-auto">
+            <p>8AM - TEXT</p>
+            <p>8AM - TEXT</p>
+            <p>8AM - TEXT</p>
+            <p>8AM - TEXT</p>
+            <p>8AM - TEXT</p>
+          </div>
+        </div>
+
+
+
+
+
+
+        <!-- <div class="row">
+          <div class="col-lg-8 mx-auto">
             <h2>Contact Start Bootstrap</h2>
             <p>Feel free to leave us a comment on the
               <a href="http://startbootstrap.com/template-overviews/grayscale/">Grayscale template overview page</a>
@@ -149,7 +178,7 @@
               </li>
             </ul>
           </div>
-        </div>
+        </div> -->
       </div>
     </section>
 
