--- a/dev/index.html
+++ b/dev/index.html
@@ -97,12 +97,8 @@
     <section id="download" class="download-section content-section  text-align-left">
       <div class="container">
         <div class="row">
-          <div class="col-lg-8 mx-auto">
-            <h2>SCHEDULE OF<span style="background-color: #03a9f4; color: #ffffff">&nbspEVENTS&nbsp</span></h2>
-          </div>
-        </div>
-        <div class="row">
           <div class="col-md-4 mx-auto">
+            <h2>DEVICE <span style="background-color: #03a9f4; color: #ffffff">&nbspDESIGN&nbsp</span></h2>
             <p>8AM - TEXT</p>
             <p>8AM - TEXT</p>
             <p>8AM - TEXT</p>
@@ -110,6 +106,7 @@
             <p>8AM - TEXT</p>
           </div>
           <div class="col-md-4 mx-auto">
+            <h2>PATIENT <span style="background-color: #03a9f4; color: #ffffff">&nbspEXPERIENCE&nbsp</span></h2>
             <p>8AM - TEXT</p>
             <p>8AM - TEXT</p>
             <p>8AM - TEXT</p>
@@ -122,11 +119,11 @@
     </section>
 
     <!-- Contact Section -->
-    <section id="contact" class="content-section text-center">
+    <section id="contact" class="content-section text-align-left">
       <div class="container">
         <div class="row">
           <div class="col-lg-8 mx-auto">
-            <h2>SCHEDULE OF<span style="background-color: #03a9f4; color: #ffffff">&nbspEVENTS&nbsp</span></h2>
+            <h2>SCHEDULE OF <span style="background-color: #03a9f4; color: #ffffff">&nbspEVENTS&nbsp</span></h2>
           </div>
         </div>
         <div class="row">
