--- a/dev/index.html
+++ b/dev/index.html
@@ -99,19 +99,13 @@
         <div class="row">
           <div class="col-md-4 mx-auto">
             <h2>DEVICE <span style="background-color: #03a9f4; color: #ffffff">&nbspDESIGN&nbsp</span></h2>
-            <p>8AM - TEXT</p>
-            <p>8AM - TEXT</p>
-            <p>8AM - TEXT</p>
-            <p>8AM - TEXT</p>
-            <p>8AM - TEXT</p>
+            <p>Challenge 1</p>
+            <p>Prize 1</p>
           </div>
           <div class="col-md-4 mx-auto">
             <h2>PATIENT <span style="background-color: #03a9f4; color: #ffffff">&nbspEXPERIENCE&nbsp</span></h2>
-            <p>8AM - TEXT</p>
-            <p>8AM - TEXT</p>
-            <p>8AM - TEXT</p>
-            <p>8AM - TEXT</p>
-            <p>8AM - TEXT</p>
+            <p>Challenge 2</p>
+            <p>Prize 2</p>
           </div>
         </div>
 
