try this for size

--- a/dev/index.html
+++ b/dev/index.html
@@ -98,11 +98,13 @@
       <div class="container">
         <div class="row">
           <div class="col-md-6 mx-auto">
+            <h2 style="font-weight:300">TRACK ONE</h2>
             <h2>DEVICE <span style="background-color: #03a9f4; color: #ffffff">&nbspDESIGN&nbsp</span></h2>
             <p>Challenge 1</p>
             <p>Prize 1</p>
           </div>
           <div class="col-md-6 mx-auto">
+            <h2 style="font-weight:300">TRACK TWO</h2> 
             <h2>PATIENT <span style="background-color: #03a9f4; color: #ffffff">&nbspEXPERIENCE&nbsp</span></h2>
             <p>Challenge 2</p>
             <p>Prize 2</p>
