--- a/dev/index.html
+++ b/dev/index.html
@@ -114,6 +114,69 @@
       </div>
     </section>
 
+
+
+    <!-- Contact Section -->
+    <section id="contact" class="content-section text-align-left">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-12 mx-auto">
+            <h2>SCHEDULE OF <span style="background-color: #03a9f4; color: #ffffff">&nbspEVENTS&nbsp</span></h2>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-6">
+            <p>8AM - TEXT</p>
+            <p>8AM - TEXT</p>
+            <p>8AM - TEXT</p>
+            <p>8AM - TEXT</p>
+            <p>8AM - TEXT</p>
+          </div>
+          <div class="col-md-6">
+            <p>8AM - TEXT</p>
+            <p>8AM - TEXT</p>
+            <p>8AM - TEXT</p>
+            <p>8AM - TEXT</p>
+            <p>8AM - TEXT</p>
+          </div>
+        </div>
+
+
+
+
+
+
+        <!-- <div class="row">
+          <div class="col-lg-8 mx-auto">
+            <h2>Contact Start Bootstrap</h2>
+            <p>Feel free to leave us a comment on the
+              <a href="http://startbootstrap.com/template-overviews/grayscale/">Grayscale template overview page</a>
+              on Start Bootstrap to give some feedback about this theme!</p>
+            <ul class="list-inline banner-social-buttons">
+              <li class="list-inline-item">
+                <a href="https://twitter.com/SBootstrap" class="btn btn-default btn-lg">
+                  <i class="fa fa-twitter fa-fw"></i>
+                  <span class="network-name">Twitter</span>
+                </a>
+              </li>
+              <li class="list-inline-item">
+                <a href="https://github.com/BlackrockDigital/startbootstrap" class="btn btn-default btn-lg">
+                  <i class="fa fa-github fa-fw"></i>
+                  <span class="network-name">Github</span>
+                </a>
+              </li>
+              <li class="list-inline-item">
+                <a href="https://plus.google.com/+Startbootstrap/posts" class="btn btn-default btn-lg">
+                  <i class="fa fa-google-plus fa-fw"></i>
+                  <span class="network-name">Google+</span>
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div> -->
+      </div>
+    </section>
+
     <section class="p-0" id="portfolio">
       <div class="container-fluid p-0">
         <div class="row no-gutters popup-gallery">
@@ -211,67 +274,6 @@
       </div>
     </section>
 
-    <!-- Contact Section -->
-    <section id="contact" class="content-section text-align-left">
-      <div class="container">
-        <div class="row">
-          <div class="col-lg-12 mx-auto">
-            <h2>SCHEDULE OF <span style="background-color: #03a9f4; color: #ffffff">&nbspEVENTS&nbsp</span></h2>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-md-6">
-            <p>8AM - TEXT</p>
-            <p>8AM - TEXT</p>
-            <p>8AM - TEXT</p>
-            <p>8AM - TEXT</p>
-            <p>8AM - TEXT</p>
-          </div>
-          <div class="col-md-6">
-            <p>8AM - TEXT</p>
-            <p>8AM - TEXT</p>
-            <p>8AM - TEXT</p>
-            <p>8AM - TEXT</p>
-            <p>8AM - TEXT</p>
-          </div>
-        </div>
-
-
-
-
-
-
-        <!-- <div class="row">
-          <div class="col-lg-8 mx-auto">
-            <h2>Contact Start Bootstrap</h2>
-            <p>Feel free to leave us a comment on the
-              <a href="http://startbootstrap.com/template-overviews/grayscale/">Grayscale template overview page</a>
-              on Start Bootstrap to give some feedback about this theme!</p>
-            <ul class="list-inline banner-social-buttons">
-              <li class="list-inline-item">
-                <a href="https://twitter.com/SBootstrap" class="btn btn-default btn-lg">
-                  <i class="fa fa-twitter fa-fw"></i>
-                  <span class="network-name">Twitter</span>
-                </a>
-              </li>
-              <li class="list-inline-item">
-                <a href="https://github.com/BlackrockDigital/startbootstrap" class="btn btn-default btn-lg">
-                  <i class="fa fa-github fa-fw"></i>
-                  <span class="network-name">Github</span>
-                </a>
-              </li>
-              <li class="list-inline-item">
-                <a href="https://plus.google.com/+Startbootstrap/posts" class="btn btn-default btn-lg">
-                  <i class="fa fa-google-plus fa-fw"></i>
-                  <span class="network-name">Google+</span>
-                </a>
-              </li>
-            </ul>
-          </div>
-        </div> -->
-      </div>
-    </section>
-
     <!-- Map Section -->
     <div id="map"></div>
 
@@ -294,6 +296,7 @@
 
     <!-- Custom scripts for this template -->
     <script src="js/grayscale.min.js"></script>
+    <script src="js/creative.min.js"></script>
 
   </body>
 
