--- a/dev/index.html
+++ b/dev/index.html
@@ -211,7 +211,7 @@
             </a>
           </div>
           <div class="col-lg-4 col-sm-6">
-            <a class="portfolio-box" href="img/team/stitelman.png">
+            <a class="portfolio-box" href="img/team/kristin.png">
               <img class="img-fluid" src="img/team/stitelman.png" alt="">
               <div class="portfolio-box-caption">
                 <div class="portfolio-box-caption-content">
@@ -241,7 +241,7 @@
             </a>
           </div>
           <div class="col-lg-4 col-sm-6">
-            <a class="portfolio-box" href="img/team/stitelman.png">
+            <a class="portfolio-box" href="img/team/caty.jpeg">
               <img class="img-fluid" src="img/team/stitelman.png" alt="">
               <div class="portfolio-box-caption">
                 <div class="portfolio-box-caption-content">
@@ -257,7 +257,7 @@
           </div>
           <div class="col-lg-4 col-sm-6">
             <a class="portfolio-box" href="img/team/stitelman.png">
-              <img class="img-fluid" src="img/team/stitelman.png" alt="">
+              <img class="img-fluid" src="img/team/khalid.jpeg" alt="">
               <div class="portfolio-box-caption">
                 <div class="portfolio-box-caption-content">
                   <div class="project-category text-faded">
