--- a/dev/index.html
+++ b/dev/index.html
@@ -241,8 +241,8 @@
             </a>
           </div>
           <div class="col-lg-4 col-sm-6">
-            <a class="portfolio-box" href="img/team/caty.jpeg">
-              <img class="img-fluid" src="img/team/caty.jpeg" alt="">
+            <a class="portfolio-box" href="img/team/caty.png">
+              <img class="img-fluid" src="img/team/caty.png" alt="">
               <div class="portfolio-box-caption">
                 <div class="portfolio-box-caption-content">
                   <div class="project-category text-faded">
@@ -256,8 +256,8 @@
             </a>
           </div>
           <div class="col-lg-4 col-sm-6">
-            <a class="portfolio-box" href="img/team/khalid.jpeg">
-              <img class="img-fluid" src="img/team/khalid.jpeg" alt="">
+            <a class="portfolio-box" href="img/team/khalid.png">
+              <img class="img-fluid" src="img/team/khalid.png" alt="">
               <div class="portfolio-box-caption">
                 <div class="portfolio-box-caption-content">
                   <div class="project-category text-faded">
