--- a/dev/index.html
+++ b/dev/index.html
@@ -185,11 +185,11 @@
               <img class="img-fluid" src="img/team/stitelman.png" alt="">
               <div class="portfolio-box-caption">
                 <div class="portfolio-box-caption-content">
-                  <div class="project-category text-faded">
-                    Category
-                  </div>
                   <div class="project-name">
-                    Project Name
+                    Tejas Sathe
+                  </div>
+                  <div class="project-category text-faded">
+                    Co-Chair
                   </div>
                 </div>
               </div>
@@ -200,11 +200,11 @@
               <img class="img-fluid" src="img/team/stitelman.png" alt="">
               <div class="portfolio-box-caption">
                 <div class="portfolio-box-caption-content">
-                  <div class="project-category text-faded">
-                    Category
-                  </div>
                   <div class="project-name">
-                    Project Name
+                    Matthew Swallow
+                  </div>
+                  <div class="project-category text-faded">
+                    Co-Chair
                   </div>
                 </div>
               </div>
@@ -215,11 +215,11 @@
               <img class="img-fluid" src="img/team/kristin.png" alt="">
               <div class="portfolio-box-caption">
                 <div class="portfolio-box-caption-content">
-                  <div class="project-category text-faded">
-                    Category
-                  </div>
                   <div class="project-name">
-                    Project Name
+                    Kristin Yu
+                  </div>
+                  <div class="project-category text-faded">
+                    Co-Chair
                   </div>
                 </div>
               </div>
@@ -230,11 +230,11 @@
               <img class="img-fluid" src="img/team/stitelman.png" alt="">
               <div class="portfolio-box-caption">
                 <div class="portfolio-box-caption-content">
-                  <div class="project-category text-faded">
-                    Category
-                  </div>
                   <div class="project-name">
-                    Project Name
+                    David Stitelman, MD
+                  </div>
+                  <div class="project-category text-faded">
+                    Advisor
                   </div>
                 </div>
               </div>
@@ -245,11 +245,11 @@
               <img class="img-fluid" src="img/team/caty.png" alt="">
               <div class="portfolio-box-caption">
                 <div class="portfolio-box-caption-content">
-                  <div class="project-category text-faded">
-                    Category
-                  </div>
                   <div class="project-name">
-                    Project Name
+                    Michael Caty, MD
+                  </div>
+                  <div class="project-category text-faded">
+                    Advisor
                   </div>
                 </div>
               </div>
@@ -260,11 +260,11 @@
               <img class="img-fluid" src="img/team/khalid.png" alt="">
               <div class="portfolio-box-caption">
                 <div class="portfolio-box-caption-content">
-                  <div class="project-category text-faded">
-                    Category
-                  </div>
                   <div class="project-name">
-                    Project Name
+                    Ayesha Khalid, MD, MBA
+                  </div>
+                  <div class="project-category text-faded">
+                    Advisor
                   </div>
                 </div>
               </div>
