--- a/dev/index.html
+++ b/dev/index.html
@@ -45,7 +45,7 @@
               <a class="nav-link js-scroll-trigger" href="#download">Prizes</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#contact">Team</a>
+              <a class="nav-link js-scroll-trigger" href="#portfolio">Team</a>
             </li>
           </ul>
         </div>
@@ -274,13 +274,36 @@
       </div>
     </section>
 
+    <!-- Sponsored Section -->
+    <section id="sponsors" class="content-section text-align-left">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-12 mx-auto">
+            <h2>POWERED BY <span style="background-color: #03a9f4; color: #ffffff">&nbspYOU&nbsp</span></h2>
+            <h2 style="font-weight:300;">AND OUR GENEROUS PARTNERS</h2>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-lg-4 mx-auto">
+            <img class="img-fluid" src="img/spnosors/CBIT-centered.jpg" alt="">
+          </div>
+          <div class="col-lg-4 mx-auto">
+            <img class="img-fluid" src="img/spnosors/city.pdf" alt="">
+          </div>
+          <div class="col-lg-4 mx-auto">
+            <img class="img-fluid" src="img/spnosors/ynhh.png" alt="">
+          </div>
+        </div>
+      </div>
+    </section>
+
     <!-- Map Section -->
-    <div id="map"></div>
+    <!-- <div id="map"></div> -->
 
     <!-- Footer -->
     <footer>
       <div class="container text-center">
-        <p>Copyright &copy; Your Website 2018</p>
+        <p>Copyright &copy; Hack the OR 2018</p>
       </div>
     </footer>
 
