--- a/dev/index.html
+++ b/dev/index.html
@@ -284,13 +284,13 @@
           </div>
         </div>
         <div class="row">
-          <div class="col-lg-4 mx-auto">
+          <div class="col-lg-4 mx-auto justify-content-center">
             <img class="img-fluid" src="img/spnosors/CBIT-centered.jpg" alt="">
           </div>
-          <div class="col-lg-4 mx-auto">
+          <div class="col-lg-4 mx-auton justify-content-center">
             <img class="img-fluid" src="img/spnosors/city.pdf" alt="">
           </div>
-          <div class="col-lg-4 mx-auto">
+          <div class="col-lg-4 mx-auto justify-content-center">
             <img class="img-fluid" src="img/spnosors/ynhh.png" alt="">
           </div>
         </div>
