--- a/dev/index.html
+++ b/dev/index.html
@@ -287,7 +287,7 @@
           <div class="col-lg-4 mx-auto justify-content-center">
             <img class="img-fluid" src="img/spnosors/CBIT-centered.jpg" alt="">
           </div>
-          <div class="col-lg-4 mx-auton justify-content-center">
+          <div class="col-lg-4 mx-auto justify-content-center">
             <img class="img-fluid" src="img/spnosors/city.png" alt="">
           </div>
           <div class="col-lg-4 mx-auto justify-content-center">
