--- a/dev/index.html
+++ b/dev/index.html
@@ -285,13 +285,13 @@
         </div>
         <div class="row">
           <div class="col-lg-4 mx-auto justify-content-center">
-            <img class="img-fluid" src="img/spnosors/CBIT-centered.jpg" alt="">
+            <img class="img-fluid" src="img/sponsors/CBIT-centered.jpg" alt="">
           </div>
           <div class="col-lg-4 mx-auto justify-content-center">
-            <img class="img-fluid" src="img/spnosors/city.png" alt="">
+            <img class="img-fluid" src="img/sponsors/city.png" alt="">
           </div>
           <div class="col-lg-4 mx-auto justify-content-center">
-            <img class="img-fluid" src="img/spnosors/ynhh.png" alt="">
+            <img class="img-fluid" src="img/sponsors/ynhh.png" alt="">
           </div>
         </div>
       </div>
