--- a/dev/index.html
+++ b/dev/index.html
@@ -284,13 +284,13 @@
           </div>
         </div>
         <div class="row">
-          <div class="col-lg-4 mx-auto text-align-center">
+          <div class="col-lg-4 mx-auto text-align-center valign">
             <img class="img-fluid" src="img/sponsors/CBIT-centered.jpg" alt="">
           </div>
-          <div class="col-lg-4 mx-auto text-align-center">
+          <div class="col-lg-4 mx-auto text-align-center valign">
             <img class="img-fluid" src="img/sponsors/city.png" alt="">
           </div>
-          <div class="col-lg-4 mx-auto text-align-center">
+          <div class="col-lg-4 mx-auto text-align-center valign">
             <img class="img-fluid" src="img/sponsors/ynhh.png" alt="">
           </div>
         </div>
