--- a/dev/index.html
+++ b/dev/index.html
@@ -280,7 +280,7 @@
         <div class="row">
           <div class="col-lg-12 mx-auto">
             <h2>POWERED BY <span style="background-color: #03a9f4; color: #ffffff">&nbspYOU&nbsp</span></h2>
-            <h2 style="font-weight:300;">AND OUR GENEROUS PARTNERS</h2>
+            <h2 style="font-weight:300;">AND OUR GENEROUS PARTNERS<br><br></h2>
           </div>
         </div>
         <div class="row">
