--- a/dev/index.html
+++ b/dev/index.html
@@ -60,7 +60,9 @@
             <div class="col-lg-6 mx-auto">
               <h1 class="brand-heading">Hack
                 <br>the <span style="background-color: #37474f">&nbspOR&nbsp</span></h1>
-              <p class="intro-text">@Yale School of Medicine</p>
+              <h2>@ AT YALE SCHOOL OF MEDICINE<br></h2>
+              <p class="intro-text">Presented by CBIT<br>
+              and Yale Surgery</p>
             </div>
             <div class="col-lg-6 mx-auto text-align-middle">
               <p class="intro-text">Saturday, September 29, 2018
