--- a/dev/index.html
+++ b/dev/index.html
@@ -65,8 +65,8 @@
               and Yale Surgery</p>
             </div>
             <div class="col-lg-6 mx-auto text-align-middle">
-              <p class="intro-text">Saturday, September 29, 2018
-                <br>333 Cedar Street, New Haven</p>
+              <h2 style = "font-weight: 300">Saturday, September 29, 2018
+              <br>333 Cedar Street, New Haven</h2>
             </div>
           </div>
           <!-- <div class="row">
