--- a/dev/index.html
+++ b/dev/index.html
@@ -65,8 +65,9 @@
               and Yale Surgery</p>
             </div>
             <div class="col-lg-6 mx-auto text-align-middle">
-              <h2 style = "font-size:18pt; font-weight: 300">Saturday, September 29, 2018
-              <br>333 Cedar Street, New Haven</h2>
+              <h2 class = "m_align" style = "font-size:18pt; font-weight: 300">Saturday, September 29, 2018
+              <br><br>THE ANLYAN CENTER<br>300 Cedar Street, New Haven, CT
+              <br>REFRESHMENTS WILL BE SERVED</h2>
             </div>
           </div>
           <!-- <div class="row">
