--- a/dev/index.html
+++ b/dev/index.html
@@ -65,7 +65,7 @@
               and Yale Surgery</p>
             </div>
             <div class="col-lg-6 mx-auto text-align-middle">
-              <h2 class = "malign">Saturday, September 29, 2018
+              <h2 class = "malign"><br><br>Saturday, September 29, 2018
               <br><br>THE ANLYAN CENTER<br>300 Cedar Street, New Haven, CT
               <br><br>REFRESHMENTS WILL BE SERVED</h2>
             </div>
