--- a/dev/index.html
+++ b/dev/index.html
@@ -60,12 +60,11 @@
             <div class="col-lg-6 mx-auto">
               <h1 class="brand-heading">Hack
                 <br>the <span style="background-color: #37474f">&nbspOR&nbsp</span></h1>
-              <h2>@ AT YALE SCHOOL OF MEDICINE<br></h2>
-              <p class="intro-text">Presented by CBIT<br>
-              and Yale Surgery</p>
+              <h2>@ AT YALE SCHOOL OF MEDICINE<br><br></h2>
+              <p class="intro-text">Presented by CBIT and Yale Surgery</p>
             </div>
             <div class="col-lg-6 mx-auto text-align-middle">
-              <h2 class = "malign"><br><br>Saturday, September 29, 2018
+              <h2 class = "malign"><br>Saturday, September 29, 2018
               <br><br>THE ANLYAN CENTER<br>300 Cedar Street, New Haven, CT
               <br><br>REFRESHMENTS WILL BE SERVED</h2>
             </div>
