--- a/dev/index.html
+++ b/dev/index.html
@@ -102,13 +102,13 @@
           <div class="col-md-6 mx-auto">
             <h2 style="font-weight:300">TRACK ONE</h2>
             <h2>DEVICE <span style="background-color: #03a9f4; color: #ffffff">&nbspDESIGN&nbsp</span></h2>
-            <p>Challenge 1</p>
+            <p>One of the essential challenges in surgery is to design instruments that are effective,durable, biologically compatible, and practicable. Whether it is making precise incisions, controlling bleeding, improving visual fields, or connecting incised tissue, there are a wide-variety of tasks that must be accomplished during an operation. In this track, we encourage participants to create novel ideas for tools that would improve outcomes for common challenges faced with the operating room.</p>
             <p>Prize 1</p>
           </div>
           <div class="col-md-6 mx-auto">
             <h2 style="font-weight:300">TRACK TWO</h2>
             <h2>PATIENT <span style="background-color: #03a9f4; color: #ffffff">&nbspEXPERIENCE&nbsp</span></h2>
-            <p>Challenge 2</p>
+            <p>While a majority of focus is often spent on improving surgical technology, a key component of the surgical experience takes place outside of the operating room. From diagnosis, to admission, and ultimately follow up, the physical and emotional process of undergoing surgery is often laden with inconveniences and burdens. In this track, we encourage participants to identify and propose solutions to improve the overall patient experience with surgery.</p>
             <p>Prize 2</p>
           </div>
         </div>
