--- a/dev/index.html
+++ b/dev/index.html
@@ -128,18 +128,21 @@
         </div>
         <div class="row">
           <div class="col-md-6">
-            <p>8AM - TEXT</p>
-            <p>8AM - TEXT</p>
-            <p>8AM - TEXT</p>
-            <p>8AM - TEXT</p>
-            <p>8AM - TEXT</p>
+            <p>FRI 7PM - Welcome - TAC Auditorium</p>
+            <p>9PM - Networking Reception - Local Venue</p>
+            <p>SAT 7AM - Breakfast - TAC Lobby</p>
+            <p>8AM - Opening Remarks - TAC Auditorium</p>
+            <p>8:30AM - Problem Pitches</p>
+            <p>9AM - Team Formation</p>
+
           </div>
           <div class="col-md-6">
-            <p>8AM - TEXT</p>
-            <p>8AM - TEXT</p>
-            <p>8AM - TEXT</p>
-            <p>8AM - TEXT</p>
-            <p>8AM - TEXT</p>
+            <p>10AM - Preliminary Idea Pitches</p>
+            <p>10:30AM - Hacking Begins - Harkness</p>
+            <p>12PM - Lunch - Harkness</p>
+            <p>5PM - Final Pitches - TAC Auditorium</p>
+            <p>6PM - Reception</p>
+            <p>6:30PM - Prizes</p>
           </div>
         </div>
 
