--- a/dev/index.html
+++ b/dev/index.html
@@ -102,7 +102,7 @@
           <div class="col-md-6 mx-auto">
             <h2 style="font-weight:300; font-size: 18pt">TRACK ONE</h2>
             <h2>DEVICE <span style="background-color: #03a9f4; color: #ffffff">&nbspDESIGN&nbsp</span></h2>
-            <p>One of the essential challenges in surgery is to design instruments that are effective,durable, biologically compatible, and practicable. Whether it is making precise incisions, controlling bleeding, improving visual fields, or connecting incised tissue, there are a wide-variety of tasks that must be accomplished during an operation. In this track, we encourage participants to create novel ideas for tools that would improve outcomes for common challenges faced with the operating room.</p>
+            <p>One of the essential challenges in surgery is to design instruments that are effective, durable, biologically compatible, and practical. Whether it is making precise incisions, controlling bleeding, improving visual fields, or connecting incised tissue, there are a wide-variety of tasks that must be accomplished during an operation. In this track, we encourage participants to create novel ideas for tools that would improve outcomes for common challenges faced with the operating room.</p>
             <p>Prize 1</p>
           </div>
           <div class="col-md-6 mx-auto">
