--- a/dev/index.html
+++ b/dev/index.html
@@ -72,19 +72,19 @@
               <form>
                 <div class="form-group">
                   <label for="exampleInputEmail1">Name</label>
-                  <input type="text" class="form-control" id="inputName" aria-describedby="inputName" placeholder="name">
+                  <input type="text" class="form-control form-control-lg" id="inputName" aria-describedby="inputName" placeholder="name">
                   <!-- <small id="nameHelp" class="form-text text-muted">We'll never share your email with anyone else.</small> -->
                 </div>
 
                 <div class="form-group">
                   <label for="exampleInputEmail1">Email address</label>
-                  <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+                  <input type="email" class="form-control form-control-lg" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
                   <!-- <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small> -->
                 </div>
 
                 <div class="form-group">
                   <label for="exampleSelect1">Example select</label>
-                  <select class="form-control" id="exampleSelect1">
+                  <select class="form-control form-control-lg" id="exampleSelect1">
                     <option>Attending</option>
                     <option>Resident</option>
                     <option>Medical Student</option>
