--- a/dev/index.html
+++ b/dev/index.html
@@ -71,7 +71,7 @@
 
               <form>
                 <div class="form-group row">
-                  <label for="exampleInputEmail1">Hi, I'm</label>
+                  <label class="col-sm-2 col-form-label" for="exampleInputEmail1">Hi, I'm</label>
                   <input type="text" class="form-control form-control-lg" id="inputName" aria-describedby="inputName" placeholder="Name">
                   <!-- <small id="nameHelp" class="form-text text-muted">We'll never share your email with anyone else.</small> -->
                 </div>
