--- a/dev/index.html
+++ b/dev/index.html
@@ -72,28 +72,43 @@
               <form>
                 <div class="form-group row">
                   <label class="col-sm-2 col-form-label" for="exampleInputEmail1">Hi, I'm</label>
-                  <div class="col-sm-10">
+                  <div class="col-sm-8">
                     <input type="text" class="form-control form-control-lg" id="inputName" aria-describedby="inputName" placeholder="Name">
                   <!-- <small id="nameHelp" class="form-text text-muted">We'll never share your email with anyone else.</small> -->
                   </div>
                 </div>
 
                 <div class="form-group row">
-                  <label for="exampleInputEmail1">My email is </label>
-                  <input type="email" class="form-control form-control-lg" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+                  <label class="col-sm-2 col-form-label" for="exampleInputEmail1">My email is </label>
+                  <div class="col-sm-8">
+                    <input type="email" class="form-control form-control-lg" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+                  </div>
                   <!-- <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small> -->
                 </div>
 
                 <div class="form-group row">
-                  <label for="exampleSelect1">and I'm a </label>
-                  <select class="form-control form-control-lg" id="exampleSelect1">
-                    <option>Attending</option>
-                    <option>Resident</option>
-                    <option>Medical Student</option>
-                    <option>Business person</option>
-                    <option>Designer</option>
-                    <option>Engineer</option>
-                  </select>
+                  <label class="col-sm-2 col-form-label" for="exampleSelect1">and I'm a </label>
+                  <div class="col-sm-8">
+                    <select class="form-control form-control-lg" id="exampleSelect1">
+                      <option>Attending</option>
+                      <option>Resident</option>
+                      <option>Medical Student</option>
+                      <option>Business person</option>
+                      <option>Designer</option>
+                      <option>Engineer</option>
+                    </select>
+                  </div>
+                </div>
+
+                <div class="form-group row">
+                  <label class="col-sm-2 col-form-label" for="exampleSelect1">interested in being a</label>
+                  <div class="col-sm-8">
+                    <select class="form-control form-control-lg" id="exampleSelect1">
+                      <option>participant</option>
+                      <option>mentor</option>
+                      <option>judge</option>
+                    </select>
+                  </div>
                 </div>
                 <button type="submit" class="btn btn-primary">Submit</button>
               </form>
