--- a/dev/index.html
+++ b/dev/index.html
@@ -71,9 +71,9 @@
 
               <form>
                 <div class="form-group row">
-                  <label class="col-sm-4 col-form-label" for="exampleInputEmail1">Hi, I'm</label>
-                  <div class="col-sm-8">
-                    <input type="text" class="form-control form-control-lg" id="inputName" aria-describedby="inputName" placeholder="Name">
+                  <div class="col-auto">
+                  <label class="col-form-label col-form-label-lg" for="exampleInputEmail1">Hi, I'm</label>    
+                  <input type="text" class="form-control form-control-lg" id="inputName" aria-describedby="inputName" placeholder="Name">
                   <!-- <small id="nameHelp" class="form-text text-muted">We'll never share your email with anyone else.</small> -->
                   </div>
                 </div>
