--- a/dev/index.html
+++ b/dev/index.html
@@ -70,11 +70,13 @@
 
 
               <form>
-                <div class="form-group row">
+                <div class="form-group row align-items-left">
                   <div class="col-auto">
-                  <label class="col-form-label col-form-label-lg" for="exampleInputEmail1">Hi, I'm</label>    
-                  <input type="text" class="form-control form-control-lg" id="inputName" aria-describedby="inputName" placeholder="Name">
-                  <!-- <small id="nameHelp" class="form-text text-muted">We'll never share your email with anyone else.</small> -->
+                    <label class="col-form-label col-form-label-lg" for="exampleInputEmail1">Hi, I'm</label>
+                  </div>
+                  <div class="col-auto">
+                    <input type="text" class="form-control form-control-lg" id="inputName" aria-describedby="inputName" placeholder="Name">
+                <!-- <small id="nameHelp" class="form-text text-muted">We'll never share your email with anyone else.</small> -->
                   </div>
                 </div>
 
